# python_challenge

./: 1.py  4.py  README.md  one.py  pyproject.toml  two.py
data/: level_2_text.py  three_text.py  two_text.py
data/level_3/: level_3_text.py
info/: four_text.py
levels/: level_0.py  level_1.py  level_10.py  level_11.py  level_12.py  level_13.py  level_14.py  level_15.py  level_16.py  level_17.py  level_18.py  level_2.py  level_3.py  level_4.py  level_5.py  level_6.py  level_7.py  level_8.py  level_9.py  one.py  three.py  two.py  zero.py
tests/: test_helpers.py  test_scripts.py
utils/: helpers.py
