[tool.poetry]
package-mode = false
name = ""
description = ""
authors = ["Your Name <you@example.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pillow = "^10.4.0"
black = "^24.8.0"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
